silo-autoscaler/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silo-autoscaler
  namespace: silo-test
spec:
  selector:
    app: silo-autoscaler
  ports:
    - name: webhook
      port: 8443
      targetPort: 8443
