silo-autoscaler/deploy/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: silo-autoscaler-webhook
webhooks:
  - name: validate.siloautoscaler.silo.dev
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: silo-autoscaler
        namespace: silo-test
        path: /validate-silo-autoscaler
        port: 8443
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lKQU5zblVlU1FIZkh6TUEwR0NTcUdTSWIzRFFFQkN3VUFNQ2d4SmpBa0JnTlYKQkFNTUhYTnBiRzh0WVhWMGIzTmpZV3hsY2k1emFXeHZMWFJsYzNRdWMzWmpNQjRYRFRJMk1ETXpNREUwTkRjeQpNbG9YRFRJM01ETXpNREUwTkRjeU1sb3dLREVtTUNRR0ExVUVBd3dkYzJsc2J5MWhkWFJ2YzJOaGJHVnlMbk5wCmJHOHRkR1Z6ZEM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDK2tiS3kKaktlYjRSdUJsdWhDZ3lXWUh1ZkZ0Wll3NlgxN3QxL09hSDJTaUY0YnA1azV6VUdiRGhqVGFTRzJWdHN4ZlVWMQprcmpQem1ua0M [...]
    rules:
      - apiGroups: ["silo.dev"]
        apiVersions: ["v1alpha1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["siloautoscalers"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: silo-test
